Cambio de readmde

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Aplicación "El Buen Gusto"
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
